--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,18 +41,18 @@ dependencies:
   flutter_gemini: ^2.0.3
   image_picker: ^1.0.7
   get: ^4.5.1
-  intl: ^0.18.1
+  intl: ^0.19.0
   sqflite: ^2.0.1
-  uuid: ^3.0.5
-  hexcolor: ^2.0.5
+  uuid: ^4.4.0
+#  hexcolor: ^2.0.5
   shared_preferences: ^2.0.11
   date_picker_timeline: ^1.2.3
   flutter_staggered_animations: ^1.0.0
-  flutter_local_notifications: ^9.2.0
-  syncfusion_flutter_calendar: ^19.4.54
+  flutter_local_notifications: ^17.2.1+1
+  syncfusion_flutter_calendar: ^26.1.41
   dio: ^5.4.0
-  firebase_core: ^1.10.6
-  firebase_messaging: ^11.2.5
+  firebase_core: ^3.1.1
+  firebase_messaging: ^15.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
